--- a/sources/css/index.css
+++ b/sources/css/index.css
@@ -2,7 +2,6 @@
     --sec-color: #641f17;
     --prim-color: #e4c05a;
 }
-
 *{
     padding: 0;
     margin: 0;
@@ -183,6 +182,7 @@ body{
 /*AQUI EMPIEZA EL ASIDE*/
 .app-ct aside{
     width: 100%;
+    height: 100vh;
     background-color: #fff;
     height: auto;
     grid-column: 2;
@@ -194,6 +194,7 @@ body{
     width: 90%;
     margin: auto;
     height: 100%;
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -250,4 +251,11 @@ body{
     font-size: 1.25rem;
     margin: 0 .5rem;
     text-indent: -.875rem;
+}
+
+/*start responsive design*/
+@media screen and (max-width: 1358px),screen and (max-height: 646px){
+    .app-ct aside .form .slct{
+        margin: 1.65rem 0;
+    }   
 }
