--- a/sources/css/index.css
+++ b/sources/css/index.css
@@ -125,6 +125,7 @@ body{
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0,0,0,.15);
     cursor: pointer;
+    outline: none;
     color: #4d88f9;
     font-size: 1.5rem;
     display: inline-flex;
