--- a/sources/css/index.css
+++ b/sources/css/index.css
@@ -179,6 +179,47 @@ body{
     background-color: #00D121;
     border-radius: 50%;
 }
+.PoU{
+    width: 20px;
+    position: relative;
+    height: 20px;
+    background-color: #4d88f9;
+    z-index: 25500;
+    border-radius: 50%;
+    border: 4px solid #fff;
+    box-shadow: 0 0 15px rgba(0,0,0,.5);
+    animation-name: pulse;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-duration: 2s;
+}
+.PoU::after{
+    position: absolute;
+    width: 100%;
+    content: "You";
+    right: 5px;
+    z-index: 1000;
+    top: calc(100% + 5px);
+    text-align: center;
+    font-weight: 600;
+    font-size: .875rem;
+    font-family: inherit;
+}
+@keyframes pulse{
+    0%{
+        border: 4px solid #fff;
+        transform: scale(1);
+    }
+    50%{
+        border: 2px solid #fff;
+        transform: scale(1.05);
+    }
+    100%{
+        border: 4px solid #fff;
+        transform: scale(1);
+    }
+}
 
 /*AQUI EMPIEZA EL ASIDE*/
 .app-ct aside{
